--- a/ JS30/5XJS/setTimeout.html
+++ b/ JS30/5XJS/setTimeout.html
@@ -18,7 +18,7 @@
       for(let i = 0; i < 3; i++){
         text[i].innerText = "Z";
       }
-
+      text.forEach(t =>{t.innerText = "AS"})
     })
     
   </script>
