feat: .val() 取 form 表單內的值
- 誤用.text() and .html() 取值 - 無效
- .val(), () 無值, 空白 意指 “取值”

--- a/ JS30/JQuery/form_get_set.html
+++ b/ JS30/JQuery/form_get_set.html
@@ -30,7 +30,16 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
   </script>
   <script>
+    $('.submit').on('click', function(){
+      let name = $('[data-field="name"]').val();
+      let phone= $('[data-field="phone"]').val();
+      let email= $('[data-field="email"]').val();
+        
+      console.log(name);
+      console.log(phone);
+      console.log(email);
 
+    });
   </script>
 </body>
 </html>
