fix:  [JQery] 計算 是不是閏年 - NG 400 以下數字
- 四年一閏，百年不閏，四百年又閏
- 百年不潤: year % 100 !== 0
- 被 4 整除 且 < 100, year = 96; (true && true) || false => true
- 被 4 整除 且 100 < year < 400, year = 300; (true && true) || false => true
- 被 4 整除 且 > 100, year = 800; (true && false) || true => true

--- a/ JS30/JQuery/years.html
+++ b/ JS30/JQuery/years.html
@@ -38,7 +38,7 @@
 $('.btn').on('click', function() {
   let year = Number($('[name="year"]').val());
   
-  if (year % 4 === 0 && year % 100 === 0 && year % 400 === 0) {
+  if ((year % 4 === 0 && year % 100 !== 0) || year % 400 === 0) {
     $('.result').text(`是閏年`);
   }
   else{
