feat: .css() 用物件方式, 設定樣式
- {"key": "value", "key": "valye", ...}

--- a/ JS30/JQuery/2022_06_25/ex-038.html
+++ b/ JS30/JQuery/2022_06_25/ex-038.html
@@ -132,6 +132,7 @@
         // Q1. 將大標題 Hello, world! 改成 Hello 5xRuby!
         $('#heading').text("Hello 5xRuby!");
         // Q2. 畫面左側的 「Sidebar Heading」的樣式改為 30px 大小，且為紅色字樣。
+        $('h3').css({"color": "red", "fontSize": "30px" });
 
       });
 
