--- a/ JS30/JQuery/2022_06_25/ex-036.html
+++ b/ JS30/JQuery/2022_06_25/ex-036.html
@@ -13,26 +13,8 @@ month = Number(month);
 
 // 三個月份為一個季節，採無條件進位制
 let season = Math.ceil( month/3 );
-
-if (season === 1) {
-  alert("春天");
-}
-else if(season === 2){
-  alert("夏天");
-}
-else if(season === 3){
-  alert("秋天");
-}
-else if(season === 4){
-  alert("冬天");
-}
-else{
-  alert("other");
-}
-
-
-
-  
+const ans = ['', '春', '夏', '秋', '冬']
+alert( ans[season] || '數值有誤');
 
 </script>
 
