feat: addClass, removeClass 調整 card 變化
- 每增加一個 class, 清除將其他不需要的 class
- 清除 class, 避免選到 col-sm-1時, 未清除 col-sm-4, 一直顯示 col-sm-4 的設定

--- a/ JS30/JQuery/2022_06_25/ex-041.html
+++ b/ JS30/JQuery/2022_06_25/ex-041.html
@@ -120,7 +120,23 @@
 
     $('.btn').on('click', function () {
       const ans = $('select').val()
-      console.log(ans);
+      // console.log(ans);
+      if(ans === 'col-sm-1'){
+        $('.card').addClass('col-sm-1')
+        $('.card').removeClass('col-sm-2 col-sm-3 col-sm-4')
+      }
+      else if(ans === 'col-sm-2'){
+        $('.card').addClass('col-sm-2')
+        $('.card').removeClass('col-sm-1 col-sm-3 col-sm-4')
+      }
+      else if(ans === 'col-sm-3'){
+        $('.card').addClass('col-sm-3')
+        $('.card').removeClass('col-sm-1 col-sm-2 col-sm-4')
+      }
+      else if(ans === 'col-sm-4'){
+        $('.card').addClass('col-sm-4')
+        $('.card').removeClass('col-sm-1 col-sm-2 col-sm-3')
+      }
 
     });
 
